--- a/ESP32_Firebase_OLED_Interface/index.html
+++ b/ESP32_Firebase_OLED_Interface/index.html
@@ -14,14 +14,14 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyDQZ_kzHvIKiT8wL_pGUdfLWC0lYQVNNZQ",
-      authDomain: "esp-project-569ce.firebaseapp.com",
-      databaseURL: "https://esp-project-569ce-default-rtdb.asia-southeast1.firebasedatabase.app/",
-      projectId: "esp-project-569ce",
-      storageBucket: "esp-project-569ce.appspot.com",
-      messagingSenderId: "911880310920",
-      appId: "1:911880310920:web:9328cbca07d5465a338f3d",
-      measurementId: "G-JKGP2C6E51"
+      apiKey: "YOUR-API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+      appId: "YOUR_APP_ID",
+      measurementId: "YOUR_MEASUREMENT_ID"
     };
 
     try {
